[package]
name = "vki2cfile"
authors = ["Vilota Pte Ltd <dev@vilota.ai>"]
version = "1.0.0"
edition = "2021"
publish = false
description = "Read or write file from/to EEPROM of MK24C64 to/from filesystem."

[profile.release]
lto = true
strip = true

[dependencies]
i2cdev = "0.6.1"
crc = "3.2.1"

[dependencies.clap]
version = "4.5.8"
features = ["derive"]

[dependencies.serde]
version = "=1.0.203"
features = ["derive"]

[dependencies.bincode]
version = "=1.3.3"